hopefully fully reset fix
i messed up a bit by copy/pasting wrong, then deleting all the files locally too

--- a/new/css/style.css
+++ b/new/css/style.css
@@ -9,11 +9,6 @@
     --main-color-hover: #ff6600;
     --text-color: #424242;
     --text-color-lighter: #868686;
-    --mode-color: #fff;
-}
-.dark-theme
-{
-    --mode-color: #161616;
 }
 html
 {
@@ -24,50 +19,57 @@ body
     font-family: 'Montserrat';
     color: var(--text-color);
 }
-.bg-img
+#index .index
 {
-    background-image: url(../img/bg-index.jpg);
-    min-height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+    color: var(--main-color);
 }
-.nav-container
+.header-wrap
+{
+    display: flex;
+    width: 100%;
+    min-height: 100px;
+    font-size: 20px;
+    font-weight: bold;
+    background: white;
+    z-index: 100;
+    box-shadow: 0 1px 5px -2px var(--text-color);
+}
+.sticky
 {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9999;
 }
-.changedColor a
+.left
 {
-    transition: all 0.5s;
-    color: var(--text-color) !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 35px 35px 35px 60px;
 }
-.topnav
+.left a
 {
-    background: transparent;
-    overflow: hidden;
+    text-decoration: none;
 }
-.topnav a
+.left a:active
 {
-    float: left;
-    margin: 30px
+    color: var(--main-color);
 }
-.topnav a:first-child
+.left a:hover
 {
-    margin: 30px 30px 30px 100px;
+    color: var(--main-color-hover);
+    text-shadow: 1px 1px #000000;
 }
-.topnav a:last-child
+.right
 {
-    margin: 30px 100px 30px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 0;
 }
-.topnav-right
+.right li
 {
-<<<<<<< HEAD
-    float: right;
-=======
     list-style: none;
     margin: 35px 20px 35px 20px;
 }
@@ -186,201 +188,154 @@ body
     text-decoration: none;
     background-color: var(--main-color);
     color: white;
->>>>>>> parent of 88cd2f5 (new update + new design page first)
     text-align: center;
+    border: 1px solid var(--main-color);
+}
+.project-button:hover
+{
+    background-color: white;
+    color: var(--main-color);
+}  
+.project-arrow::after
+{
+    content: '\25ba';
+    padding-left: 10px;
+}
+.section-project-images
+{
     display: flex;
-    align-items: center;
-    min-height: 105px;
-}
-.topnav-right a
-{
-    text-decoration: none;
-    color: var(--mode-color);
-    font-size: 18px;
-}
-#mode-icon
-{
-    width: 30px;
-    cursor: pointer;
-}
-.hover-anim
-{
-    display: inline-block;
     position: relative;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 80px;
+    margin-bottom: 200px;
+    width: calc(100% - 150px - 150px);
+    min-width: 980px;
 }
-.hover-anim::after
-{
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: var(--main-color);
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-.hover-anim:hover::after
-{
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-.scroll-div::after
-{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    content: '';
-    width: 100%;
-    height: 80%;
-}
-.scroll-div h1
+.section-project-images i
 {
     position: absolute;
     top: 50%;
-    left: 50%;
-    z-index: 2;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    color: var(--mode-color);
+    transform: translateY(-50%);
+    height: 44px;
+    width: 44px;
+    color: #343F4F;
+    cursor: pointer;
+    font-size: 1.15rem;
     text-align: center;
-    white-space: nowrap;
-    font-size: 60px;
-}   
-#scroll-button a 
-    {
-        padding-top: 70px;
-    }
-    #scroll-button a span 
-    {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        width: 24px;
-        height: 24px;
-        margin-left: -12px;
-        border-left: 1px solid #fff;
-        border-bottom: 1px solid #fff;
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        -webkit-animation: sdb05 1.5s infinite;
-        animation: sdb05 1.5s infinite;
-        box-sizing: border-box;
-    }
-    @-webkit-keyframes sdb05 
-    {
-        0% 
-        {
-            -webkit-transform: rotate(-45deg) translate(0, 0);
-            opacity: 0;
-        }
-        50% 
-        {
-            opacity: 1;
-        }
-        100% 
-        {
-            -webkit-transform: rotate(-45deg) translate(-20px, 20px);
-            opacity: 0;
-        }
-    }
-    @keyframes sdb05 {
-        0% 
-        {
-            transform: rotate(-45deg) translate(0, 0);
-            opacity: 0;
-        }
-        50% 
-        {
-            opacity: 1;
-        }
-        100% 
-        {
-            transform: rotate(-45deg) translate(-20px, 20px);
-            opacity: 0;
-        }
+    line-height: 44px;
+    background: var(--main-color);
+    color: white;
+    border-radius: 50%;
+    transition: transform 0.1s linear;
 }
-.scroll a 
+.section-project-images i:active
 {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    z-index: 2;
-    display: inline-block;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    color: #fff;
-    letter-spacing: .1em;
-    text-decoration: none;
-    transition: opacity .3s;
+    transform: translateY(-50%) scale(0.9);
 }
-.scroll a:hover 
+.section-project-images i:hover
 {
-    opacity: .5;
+    background: #f2f2f2;
 }
-.content-section
+.section-project-images i:first-child
 {
-    position: relative;
-    background-color: #e5e5e5;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    left: -22px;
+    display: none;
 }
-.container
+.section-project-images i:last-child
 {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    right: -22px;
 }
-.about-main-title
+.section-project-images .image-carousel
 {
-    font-size: 50px;
-    margin-bottom: 50px;
-}
-.content
-{
-    position: relative;
-    width: 1000px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.content .content-image
-{
-    position: relative;
-    width: 800px;
-    height: 400px;
+    font-size: 0px;
+    cursor: pointer;
     overflow: hidden;
+    white-space: nowrap;
+    scroll-behavior: smooth;
 }
-.content .content-image img
+.image-carousel.dragging
 {
-    z-index: 111;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    cursor: grab;
+    scroll-behavior: auto;
+}
+.image-carousel.dragging img
+{
+    pointer-events: none;
+}
+.image-carousel img
+{
+    height: 480px;
     object-fit: cover;
-<<<<<<< HEAD
-    border-radius: 10px;
-=======
     user-select: none;
     margin-left: 14px;
     width: calc(100% / 3); 
->>>>>>> parent of 88cd2f5 (new update + new design page first)
 }
-.content .content-text
+.image-carousel img:first-child
 {
-    z-index: 222;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(20px);
-    padding: 40px;
-    max-width: 400px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    transform: translate(-80px, 50px);
+    margin-left: 0px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .images-1  OLD IMAGES IDEAS
+{
+    width: 980px;
+    height: 600px;
+    border: 1px solid var(--main-color);
+}
+.images-2 
+{
+    z-index: 3;
+    position: absolute;
+    top: 50px;
+    left: 75px;
+    right: -50px;
+    width: 980px;
+    height: 600px;
+    border: 1px solid var(--main-color);
+}
+.images-3
+{
+    z-index: 5;
+    position: absolute;
+    top: 100px;
+    left: 150px;
+    width: 980px;
+    height: 600px;
+    border: 1px solid var(--main-color);
+} */
